# pixi.cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
pixi/: Point.cpp  Point.h  Rectangle.cpp  Rectangle.h
